--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -101,14 +101,6 @@
     "create": "Create a topic",
     "empty": "No topic yet"
   },
-  "CircleThreadStatus":{
-    "status":{
-      "Active": "In progress",
-      "Blocked": "Blocked",
-      "Closed": "Done",
-      "Preparation": "In preparation"
-    }
-  },
   "CircleWithLeaderItem": {
     "notAssigned": "Not assigned"
   },
@@ -188,6 +180,7 @@
     "TaskCreate": "<author /> has created the task <task />",
     "TaskUpdate": "<author /> has modified the task <task />",
     "TaskStatusUpdate": "<author /> marked the task <task /> as <status />",
+    "ThreadStatusUpdate": "<author /> changed the topic <task /> from \"<prevStatus />\" to \"<status />\"",
     "TaskArchive": "<author /> has archived the task <task />",
     "DecisionCreate": "<author /> has created the decision <decision />",
     "DecisionUpdate": "<author /> has modified the decision <decision />",
@@ -940,6 +933,12 @@
       "Blocked": "Blocked",
       "Done": "Done",
       "NotDone": "Not done"
+    },
+    "threadStatus":{
+      "Active": "In progress",
+      "Blocked": "Blocked",
+      "Closed": "Done",
+      "Preparation": "In preparation"
     }
   },
   "useCreateTask": {
