add to menu status filter

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -842,6 +842,9 @@
       "NotInvited": "Other topics",
       "All": "All topics"
     },
+    "status":{
+      "title": "Status"
+    },
     "archives": {
       "title": "Archive",
       "show": "Show Archive"
