--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -146,6 +146,38 @@
     "Members": "Membres uniquement",
     "Members_desc": "Afficher tous les Membres."
   },
+  "ImportPage": {
+    "title": "Importer une organisation.",
+    "provider": {
+      "heading": "Importer une organisation depuis...",
+      "text": "D'où viennent vos données ?",
+      "other": "Autre app",
+      "otherName": "Nom de l'app ou du format",
+      "otherSubmit": "Continuer"
+    },
+    "upload": {
+      "heading": "Importer depuis {{provider}}",
+      "text-Holaspirit": "Exportez votre organisation depuis Holaspirit (<a href=\"https://help.holaspirit.com/fr/articles/1822926-exporter-les-donnees-de-mon-organisation-en-tant-qu-administrateur\">Comment ?</a>),<br />puis sélectionnez le fichier obtenu sur votre disque dur.",
+      "terms": "Je certifie que les données m'appartiennent et que je suis autorisé(e) à les importer.",
+      "button": "Sélectionner le fichier à importer"
+    },
+    "loading": {
+      "heading": "Import en cours...",
+      "text": "Votre organisation est en cours de création."
+    },
+    "success": {
+      "heading": "Votre organisation est prête 🎉",
+      "text": ""
+    },
+    "error": {
+      "heading": "Une erreur s'est produite",
+      "text": "Un message a été envoyé au support."
+    },
+    "unknown": {
+      "heading": "Fichier non supporté, mais on peut vous aider",
+      "text": "Le format de votre fichier n'est pas supportée par notre système d'import pour le moment. Une demande a été envoyée au support pour vous venir en aide dans un délai de 12h."
+    }
+  },
   "LangModal": {
     "heading": "Langue"
   },
@@ -426,6 +458,9 @@
       "notInvited": "Pas invité.e"
     }
   },
+  "ModalBackButton": {
+    "label": "Retour"
+  },
   "ModalCloseStaticButton": {
     "label": "Fermer"
   },
@@ -443,6 +478,11 @@
     "create": {
       "heading": "Créer une organisation",
       "slug": "URL"
+    },
+    "import": {
+      "heading": "Importer une organisation",
+      "text": "Si vous avez des données dans un autre outil, vous pouvez les importer dans une nouvelle organisation Rolebase !",
+      "button": "Importer"
     }
   },
   "OrgDeleteModal": {
@@ -658,16 +698,8 @@
       "billingDetailsUpdateError": "Erreur lors de la mise à jour des informations de facturation",
       "updatepaymentMethod": "Mise à jour du moyen de paiement",
       "paymentMethodUpdated": "Moyen de paiement mis à jour",
-      "paymentMethodUpdateError": "Erreur lors de la mise à jour du moyen de paiement",
-      "errorLoadingInvoices": "Une erreur s'est produite lors de la recupération des factures"
+      "paymentMethodUpdateError": "Erreur lors de la mise à jour du moyen de paiement"
     }
-  },
-  "SubscriptionInvoiceCalculationDetails": {
-    "title": "How is my invoice calculated?",
-    "explaination": "The amount of your invoice is calculated in the following way:",
-    "desc1": "Each active member (member associated to a Rolebase account) cost 5 euros per month",
-    "desc2": "If an active user is added during the month, the amount is prorated between the current date and the end of the billing cycle and will be added to your next invoice",
-    "desc3": "If an active user is deleted during the month, a credit note for the time spent during the month will be applied to your next invoice"
   },
   "SubscriptionInvoiceCalculationDetails": {
     "title": "Comment ma facture est-elle calculée ?",
