combine thread logs to activities

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -180,7 +180,7 @@
     "TaskCreate": "<author /> has created the task <task />",
     "TaskUpdate": "<author /> has modified the task <task />",
     "TaskStatusUpdate": "<author /> marked the task <task /> as <status />",
-    "ThreadStatusUpdate": "<author /> changed the topic <task /> from \"<prevStatus />\" to \"<status />\"",
+    "ThreadStatusUpdate": "<author /> changed the topic <task /> from <prevStatus /> to <status />",
     "TaskArchive": "<author /> has archived the task <task />",
     "DecisionCreate": "<author /> has created the decision <decision />",
     "DecisionUpdate": "<author /> has modified the decision <decision />",
@@ -823,6 +823,9 @@
   "ThreadActivityThread": {
     "text": "has created a topic:"
   },
+  "ThreadActivityChangeStatus": {
+    "text": "has changed topic from <prevStatus /> to <status />"
+  },
   "ThreadEditModal": {
     "headingEdit": "Edit a topic",
     "headingCreate": "New topic",
@@ -830,14 +833,6 @@
     "titlePlaceholder": "What are we discussing?...",
     "invite": "Invite",
     "settings": "Settings"
-  },
-  "ThreadStatusMenu":{
-    "status":{
-      "Active": "In progress",
-      "Blocked": "Blocked",
-      "Closed": "Done",
-      "Preparation": "In preparation"
-    }
   },
   "ThreadsPage": {
     "heading": "Topics",
