--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -896,6 +896,7 @@
     "error": "Erreur",
     "name": "Nom",
     "copy": "Copier",
+    "copyStepNotes": "Reprendre les notes de la réunion précédente",
     "toastCopied": "URL copiée",
     "none": "Aucun",
     "errorOccurred": "Une erreur s'est produite.",
