--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -875,18 +875,23 @@
   },
   "ThreadsPage": {
     "heading": "Sujets",
+    "create": "Nouveau sujet",
+    "empty": "Aucun sujet."
+  },
+  "ThreadsFilterMenu":{
     "participation": {
       "title": "Participation",
       "Invited": "Mes sujets",
       "NotInvited": "Autres sujets",
       "All": "Tous les sujets"
     },
+    "status":{
+      "title": "Statut du sujet"
+    },
     "archives": {
       "title": "Archives",
       "show": "Afficher les archives"
-    },
-    "create": "Nouveau sujet",
-    "empty": "Aucun sujet."
+    }
   },
   "UserMenu": {
     "tooltip": "Mes paramètres",
