add to task view

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -748,7 +748,8 @@
     "memberId": "Assigned member",
     "dueDate": "Deadline",
     "description": "Description",
-    "notes": "Notes, links..."
+    "notes": "Notes, links...",
+    "logs": "History"
   },
   "TaskDeleteModal": {
     "heading": "Delete task",
