--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -101,14 +101,6 @@
     "create": "Créer un sujet",
     "empty": "Aucun sujet pour le moment"
   },
-  "CircleThreadStatus":{
-    "status":{
-      "Active": "En cours",
-      "Blocked": "Bloqué",
-      "Closed": "Terminé",
-      "Preparation": "En préparation"
-    }
-  },
   "CircleWithLeaderItem": {
     "notAssigned": "Non assigné"
   },
@@ -220,6 +212,7 @@
     "TaskCreate": "<author /> a créé la tâche <task />",
     "TaskUpdate": "<author /> a modifié la tâche <task />",
     "TaskStatusUpdate": "<author /> a marqué la tâche <task /> comme <status />",
+    "ThreadStatusUpdate": "<author /> a changé le sujet <task /> de <prevStatus /> à <status />",
     "TaskArchive": "<author /> a archivé la tâche <task />",
     "DecisionCreate": "<author /> a créé la décision <decision />",
     "DecisionUpdate": "<author /> a modifié la décision <decision />",
@@ -863,6 +856,9 @@
   "ThreadActivityThread": {
     "text": "a créé un sujet :"
   },
+  "ThreadActivityChangeStatus": {
+    "text": "a changé le status du sujet : <status />"
+  },
   "ThreadEditModal": {
     "headingEdit": "Modifier un sujet",
     "headingCreate": "Nouveau sujet",
@@ -870,15 +866,6 @@
     "titlePlaceholder": "On discute de quoi ?...",
     "invite": "Inviter",
     "settings": "Paramètres"
-  },
-  "ThreadStatusMenu":{
-    "title": "Statut du sujet",
-    "status":{
-      "Active": "En cours",
-      "Blocked": "Bloqué",
-      "Closed": "Terminé",
-      "Preparation": "En préparation"
-    }
   },
   "ThreadsPage": {
     "heading": "Sujets",
@@ -974,6 +961,12 @@
       "Blocked": "Bloquée",
       "Done": "Terminée",
       "NotDone": "Non terminée"
+    },
+    "threadStatus":{
+      "Active": "En cours",
+      "Blocked": "Bloqué",
+      "Closed": "Terminé",
+      "Preparation": "En préparation"
     }
   },
   "useCreateTask": {
