--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -106,6 +106,14 @@
     "create": "Create a topic",
     "empty": "No topic yet"
   },
+  "CircleThreadStatus":{
+    "status":{
+      "Active": "In progress",
+      "Blocked": "Blocked",
+      "Closed": "Done",
+      "Preparation": "In preparation"
+    }
+  },
   "CircleWithLeaderItem": {
     "notAssigned": "Not assigned"
   },
@@ -841,6 +849,15 @@
     "titlePlaceholder": "What are we discussing?...",
     "invite": "Invite",
     "settings": "Settings"
+  },
+  "ThreadStatusMenu":{
+    "title": "Topic's status",
+    "status":{
+      "Active": "In progress",
+      "Blocked": "Blocked",
+      "Closed": "Done",
+      "Preparation": "In preparation"
+    }
   },
   "ThreadsPage": {
     "heading": "Topics",
