--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -212,6 +212,7 @@
     "TaskCreate": "<author /> a créé la tâche <task />",
     "TaskUpdate": "<author /> a modifié la tâche <task />",
     "TaskStatusUpdate": "<author /> a marqué la tâche <task /> comme <status />",
+    "ThreadStatusUpdate": "<author /> a changé le sujet <task /> de <prevStatus /> à <status />",
     "TaskArchive": "<author /> a archivé la tâche <task />",
     "DecisionCreate": "<author /> a créé la décision <decision />",
     "DecisionUpdate": "<author /> a modifié la décision <decision />",
@@ -855,6 +856,9 @@
   "ThreadActivityThread": {
     "text": "a créé un sujet :"
   },
+  "ThreadActivityChangeStatus": {
+    "text": "a changé le status du sujet : <status />"
+  },
   "ThreadEditModal": {
     "headingEdit": "Modifier un sujet",
     "headingCreate": "Nouveau sujet",
@@ -957,6 +961,12 @@
       "Blocked": "Bloquée",
       "Done": "Terminée",
       "NotDone": "Non terminée"
+    },
+    "threadStatus":{
+      "Active": "En cours",
+      "Blocked": "Bloqué",
+      "Closed": "Terminé",
+      "Preparation": "En préparation"
     }
   },
   "useCreateTask": {
