--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -240,7 +240,8 @@
     "scopeMine": "All my meetings",
     "scopeCircle": "All meetings in a role",
     "circle": "Role",
-    "url": "iCal URL"
+    "url": "iCal URL",
+    "help": "Synchronization between your Rolebase calendar and your external calendar may take up to few minutes."
   },
   "MeetingOpenCurrent": {
     "heading": "Meeting in progress",
