handle not done status filter

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -944,10 +944,11 @@
       "NotDone": "Not done"
     },
     "threadStatus":{
+      "Preparation": "In preparation",
       "Active": "In progress",
       "Blocked": "Blocked",
       "Closed": "Done",
-      "Preparation": "In preparation"
+      "NotDone": "Not done"
     }
   },
   "useCreateTask": {
