--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -870,7 +870,8 @@
   },
   "VerifyEmailModal":{
     "heading": "Verify your email address",
-    "text": "Click on the link we sent you by email to verify your email address.",
+    "text": "You received an email, click on the link to verify your email address.",
+    "resend": "Receive a new email",
     "close": "Close"
   },
   "VideoConfFormControl": {
