filter by thread status (#92)
* status when create and display on thread item

* fix from review

* squashed migrations

* fix migrations

* see status history on thread (#91)

* see status history on thread

* combine thread logs to activities

* fix form reviews

* fix relationships thread and combine subscription

* show threadId

* use thread_by_pk for subscription

* fix some permissions

* see status history on thread

* combine thread logs to activities

* fix form reviews

* fix relationships thread and combine subscription

* show threadId

* filter by thread status

* fix from review

* remove title

* manage conflicts after rebase

* handle not done status filter

* fix modal heading

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -875,18 +875,23 @@
   },
   "ThreadsPage": {
     "heading": "Sujets",
+    "create": "Nouveau sujet",
+    "empty": "Aucun sujet."
+  },
+  "ThreadsFilterMenu":{
     "participation": {
       "title": "Participation",
       "Invited": "Mes sujets",
       "NotInvited": "Autres sujets",
       "All": "Tous les sujets"
     },
+    "status":{
+      "title": "Statut du sujet"
+    },
     "archives": {
       "title": "Archives",
       "show": "Afficher les archives"
-    },
-    "create": "Nouveau sujet",
-    "empty": "Aucun sujet."
+    }
   },
   "UserMenu": {
     "tooltip": "Mes paramètres",
@@ -970,10 +975,11 @@
       "NotDone": "Non terminée"
     },
     "threadStatus":{
+      "Preparation": "En préparation",
       "Active": "En cours",
       "Blocked": "Bloqué",
       "Closed": "Terminé",
-      "Preparation": "En préparation"
+      "NotDone": "Non terminé"
     }
   },
   "useCreateTask": {
