--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -844,18 +844,23 @@
   },
   "ThreadsPage": {
     "heading": "Topics",
+    "create": "New topic",
+    "empty": "No topic."
+  },
+  "ThreadsFilterMenu":{
     "participation": {
       "title": "Participation",
       "Invited": "My topics",
       "NotInvited": "Other topics",
       "All": "All topics"
     },
+    "status":{
+      "title": "Topics status"
+    },
     "archives": {
       "title": "Archive",
       "show": "Show Archive"
-    },
-    "create": "New topic",
-    "empty": "No topic."
+    }
   },
   "VacantRolesModal": {
     "heading": "Vacant roles",
@@ -939,10 +944,11 @@
       "NotDone": "Not done"
     },
     "threadStatus":{
+      "Preparation": "In preparation",
       "Active": "In progress",
       "Blocked": "Blocked",
       "Closed": "Done",
-      "Preparation": "In preparation"
+      "NotDone": "Not done"
     }
   },
   "useCreateTask": {
