Add alert when creating a topic without participating

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -840,6 +840,8 @@
     "title": "Title",
     "titlePlaceholder": "What are we discussing?...",
     "invite": "Invite",
+    "inviteWarning": "You are not a participant, do you want to participate in this topic?",
+    "inviteButton": "Add me",
     "settings": "Settings"
   },
   "ThreadsPage": {
