Group buttons that create entities into "Add" menu (in threads and meetings)

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -530,10 +530,8 @@
     "accountabilities": "Accountabilities",
     "accountabilitiesPlaceholder": "What it should do...",
     "checklist": "Checklist",
-    "checklistAdd": "Add",
     "checklistPlaceholder": "List of recurring actions...",
     "indicator": "Indicators",
-    "indicatorAdd": "Add",
     "indicatorPlaceholder": "List of indicators...",
     "notes": "Notes",
     "notesPlaceholder": "Notes, links...",
@@ -787,7 +785,7 @@
   },
   "ThreadActivityCreate": {
     "placeholder": "Message...",
-    "poll": "Create a Poll",
+    "poll": "Poll",
     "defaultEntityDescription": "Topic: {{thread}}"
   },
   "ThreadActivityDecision": {
@@ -884,14 +882,15 @@
   "common": {
     "save": "Save",
     "create": "Create",
+    "add": "Add",
     "send": "Send",
     "open": "Open",
     "skip": "Skip",
     "confirm": "Confirm",
-    "createThread": "Create a Topic",
-    "createMeeting": "Create a Meeting",
-    "createTask": "Create a Task",
-    "createDecision": "Create a Decision",
+    "createThread": "Topic",
+    "createMeeting": "Meeting",
+    "createTask": "Task",
+    "createDecision": "Decision",
     "close": "Close",
     "edit": "Edit",
     "move": "Move",
