Improve recurring meetings discovery

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -240,6 +240,7 @@
     "start": "Start",
     "duration": "Duration",
     "durationSuffix": "minutes",
+    "recurrence": "Recurrence",
     "invite": "Invite",
     "steps": "Steps"
   },
