--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -272,6 +272,7 @@
     "start": "Début",
     "duration": "Durée",
     "durationSuffix": "minutes",
+    "recurrence": "Récurrence",
     "invite": "Inviter",
     "steps": "Déroulé"
   },
